// Vitest Snapshot v1

exports[`Dialog > Dialog confirmVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      确认类-带标题
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      确认类-无标题
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <!---->
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--danger t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              警示操作
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Dialog > Dialog feedbackVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       反馈类-基础 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息等内容。描述文案尽可能控制在三行内
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer"
        >
          <!---->
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              知道了
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       反馈类-无标题 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <!---->
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer"
        >
          <!---->
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              知道了
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       反馈类-内容超长 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              
              这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.
              
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer"
        >
          <!---->
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              知道了
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Dialog > Dialog imageDialogVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-ddf95d52=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      图片置顶
      
    </span>
    <!---->
  </button>
  <teleport-stub
    data-v-ddf95d52=""
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        
        <div
          class="t-image t-image--square"
          data-v-ddf95d52=""
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!--v-if-->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/dialog1.png"
              style="object-fit: contain; object-position: center;"
            />
          </picture>
        </div>
        
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
    data-v-ddf95d52=""
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-ddf95d52=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      图片居中
      
    </span>
    <!---->
  </button>
  <teleport-stub
    data-v-ddf95d52=""
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
        </div>
        
        <div
          class="t-image t-image--square image"
          data-v-ddf95d52=""
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!--v-if-->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/dialog1.png"
              style="object-fit: contain; object-position: center;"
            />
          </picture>
        </div>
        
        <div
          class="t-dialog__footer"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Dialog > Dialog inputVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-4a76bf3d=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      输入类-无描述
      
    </span>
    <!---->
  </button>
  <teleport-stub
    data-v-4a76bf3d=""
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              
              <div
                class="t-input t-input--layout-horizontal t-input--border"
                data-v-4a76bf3d=""
              >
                <div
                  class="t-input__wrap--prefix"
                >
                  <!---->
                  <div
                    class="t-input__label"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input__content t-input--default"
                  >
                    <input
                      autocomplete="Off"
                      class="t-input__control t-input--default"
                      maxlength="-1"
                      name=""
                      placeholder="请输入文字"
                      type="text"
                    />
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer t-dialog__footer--full"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle t-dialog__button t-dialog__button--text"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-dialog__button t-dialog__button--text"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
    data-v-4a76bf3d=""
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-4a76bf3d=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      输入类-带描述
      
    </span>
    <!---->
  </button>
  <teleport-stub
    data-v-4a76bf3d=""
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              
              <p
                data-v-4a76bf3d=""
              >
                告知当前状态、信息和解决方法等，描述文案尽可能控制在三行内
              </p>
              <div
                class="t-input t-input--layout-horizontal t-input--border"
                data-v-4a76bf3d=""
              >
                <div
                  class="t-input__wrap--prefix"
                >
                  <!---->
                  <div
                    class="t-input__label"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="t-input__wrap"
                >
                  <div
                    class="t-input__content t-input--default"
                  >
                    <input
                      autocomplete="Off"
                      class="t-input__control t-input--default"
                      maxlength="-1"
                      name=""
                      placeholder="请输入文字"
                      type="text"
                    />
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer t-dialog__footer--full"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle t-dialog__button t-dialog__button--text"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-dialog__button t-dialog__button--text"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Dialog > Dialog mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Dialog 对话框
  </h1>
  <p
    class="summary"
  >
    用于显示重要提示或请求用户进行重要操作，一种打断当前操作的模态视图。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        反馈类对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           反馈类-基础 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息等内容。描述文案尽可能控制在三行内
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer"
            >
              <!---->
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  知道了
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           反馈类-无标题 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <!---->
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer"
            >
              <!---->
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  知道了
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           反馈类-内容超长 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  
                  这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案.
                  
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer"
            >
              <!---->
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  知道了
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        确认类对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          确认类-带标题
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          确认类-无标题
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <!---->
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--danger t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  警示操作
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        输入对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-4a76bf3d=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          输入类-无描述
          
        </span>
        <!---->
      </button>
      <teleport-stub
        data-v-4a76bf3d=""
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  
                  <div
                    class="t-input t-input--layout-horizontal t-input--border"
                    data-v-4a76bf3d=""
                  >
                    <div
                      class="t-input__wrap--prefix"
                    >
                      <!---->
                      <div
                        class="t-input__label"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="t-input__wrap"
                    >
                      <div
                        class="t-input__content t-input--default"
                      >
                        <input
                          autocomplete="Off"
                          class="t-input__control t-input--default"
                          maxlength="-1"
                          name=""
                          placeholder="请输入文字"
                          type="text"
                        />
                        <!---->
                        <!---->
                        <!---->
                      </div>
                      <!---->
                    </div>
                  </div>
                  
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer t-dialog__footer--full"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle t-dialog__button t-dialog__button--text"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-dialog__button t-dialog__button--text"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
        data-v-4a76bf3d=""
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-4a76bf3d=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          输入类-带描述
          
        </span>
        <!---->
      </button>
      <teleport-stub
        data-v-4a76bf3d=""
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  
                  <p
                    data-v-4a76bf3d=""
                  >
                    告知当前状态、信息和解决方法等，描述文案尽可能控制在三行内
                  </p>
                  <div
                    class="t-input t-input--layout-horizontal t-input--border"
                    data-v-4a76bf3d=""
                  >
                    <div
                      class="t-input__wrap--prefix"
                    >
                      <!---->
                      <div
                        class="t-input__label"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="t-input__wrap"
                    >
                      <div
                        class="t-input__content t-input--default"
                      >
                        <input
                          autocomplete="Off"
                          class="t-input__control t-input--default"
                          maxlength="-1"
                          name=""
                          placeholder="请输入文字"
                          type="text"
                        />
                        <!---->
                        <!---->
                        <!---->
                      </div>
                      <!---->
                    </div>
                  </div>
                  
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer t-dialog__footer--full"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle t-dialog__button t-dialog__button--text"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-dialog__button t-dialog__button--text"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图片的对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-ddf95d52=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          图片置顶
          
        </span>
        <!---->
      </button>
      <teleport-stub
        data-v-ddf95d52=""
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            
            <div
              class="t-image t-image--square"
              data-v-ddf95d52=""
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/dialog1.png"
                  style="object-fit: contain; object-position: center;"
                />
              </picture>
            </div>
            
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
        data-v-ddf95d52=""
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-ddf95d52=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          图片居中
          
        </span>
        <!---->
      </button>
      <teleport-stub
        data-v-ddf95d52=""
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法
                </div>
              </div>
            </div>
            
            <div
              class="t-image t-image--square image"
              data-v-ddf95d52=""
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/dialog1.png"
                  style="object-fit: contain; object-position: center;"
                />
              </picture>
            </div>
            
            <div
              class="t-dialog__footer"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        其它形态对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           文字按钮 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer t-dialog__footer--full"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle t-dialog__button t-dialog__button--text"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-dialog__button t-dialog__button--text"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           水平基础按钮 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           垂直基础按钮 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer t-dialog__footer--column"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--vertical"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           垂直多按钮 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <!---->
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer t-dialog__footer--column"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  次要按钮
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  次要按钮
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--vertical"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  主要按钮
                </span>
                <!---->
              </button>
              
              <!---->
              <!---->
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <div
        class="btn-gap"
      />
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           带关闭按钮 
          
        </span>
        <!---->
      </button>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-dialog "
          >
            <!---->
            <div
              class="t-dialog__close-btn"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="t-dialog__content"
            >
              <div
                class="t-dialog__header"
              >
                对话框标题
              </div>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t-dialog__body-text"
                >
                  告知当前状态、信息和解决方法
                </div>
              </div>
            </div>
            <!---->
            <div
              class="t-dialog__footer t-dialog__footer--column"
            >
              <!---->
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  取消
                </span>
                <!---->
              </button>
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--vertical"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  确认
                </span>
                <!---->
              </button>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件用法
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        命令行调用
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          命令行操作
        </span>
        <!---->
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Dialog > Dialog multiStateVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       文字按钮 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer t-dialog__footer--full"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle t-dialog__button t-dialog__button--text"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-dialog__button t-dialog__button--text"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       水平基础按钮 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--horizontal"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       垂直基础按钮 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer t-dialog__footer--column"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--vertical"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       垂直多按钮 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <!---->
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer t-dialog__footer--column"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              次要按钮
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              次要按钮
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--vertical"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              主要按钮
            </span>
            <!---->
          </button>
          
          <!---->
          <!---->
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <div
    class="btn-gap"
  />
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
       带关闭按钮 
      
    </span>
    <!---->
  </button>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--center"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-dialog "
      >
        <!---->
        <div
          class="t-dialog__close-btn"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-dialog__content"
        >
          <div
            class="t-dialog__header"
          >
            对话框标题
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__body-text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
        </div>
        <!---->
        <div
          class="t-dialog__footer t-dialog__footer--column"
        >
          <!---->
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dialog__button t-dialog__button--vertical"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              取消
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dialog__button t-dialog__button--vertical"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              确认
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Dialog > Dialog pluginVue demo works fine 1`] = `
<button
  aria-disabled="false"
  class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
  role="button"
  type="button"
>
  <!---->
  <span
    class="t-button__content"
  >
    命令行操作
  </span>
  <!---->
</button>
`;
